add: 添加切换页面时lab显示与隐藏逻辑

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div id="example1-tab3" class="mdui-p-a-2">shopping content</div>
 
     <!-- 浮动操作按钮 -->
-    <div class="mdui-fab-wrapper" id="fab-wrapper" mdui-fab="{trigger: 'hover'}">
+    <div class="mdui-fab-wrapper mdui-fab-hide" id="fab-wrapper">
         <button class="mdui-fab mdui-ripple mdui-color-theme-accent">
             <i class="mdui-icon material-icons">add</i>
             <i class="mdui-icon mdui-fab-opened material-icons">close</i>
