--- a/index.html
+++ b/index.html
@@ -80,9 +80,21 @@
     </div>
 
     <!-- 欢迎使用 -->
-    <div id="page-welcome" class="mdui-p-a-2">
+    <div id="page-welcome" class="mdui-typo mdui-p-a-2">
         <h1>欢迎使用 Self Study Kit !</h1>
         <div>Self Study Kit 是一个基于H5的自习辅助工具集. </div>
+        <h1>工具大全</h1>
+        <div>时间管理
+            <h2>时钟</h2>
+            实时显示时间的工具, 可选择附上当前时间的其他相关详细信息.
+            <h2>番茄钟</h2>
+            一个帮助实现
+            <a href="https://baike.baidu.com/item/%E7%95%AA%E8%8C%84%E5%B7%A5%E4%BD%9C%E6%B3%95/6353502"
+                id="tooltip-番茄工作法">"番茄工作法"</a>
+            的倒计时工具, 可用于协调自己在学习间的休息时间.
+            <h2>单词本</h2>
+            一个记录不熟悉单词的工具, 可以用于辅助背记单词. 
+        </div>
     </div>
 
 
