add: 用于切换fab-wrapper外观和功能的函数

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <i class="mdui-icon material-icons">add</i>
             <i class="mdui-icon mdui-fab-opened material-icons">close</i>
         </button>
-        <div class="mdui-fab-dial">
+        <div class="mdui-fab-dial" id="fab-dial">
             <button class="mdui-fab mdui-fab-mini mdui-ripple mdui-color-pink">
                 <i class="mdui-icon material-icons">backup</i>
             </button>
