--- a/index.html
+++ b/index.html
@@ -39,29 +39,7 @@
 
     <!-- mdui侧边栏 -->
     <div class="mdui-drawer mdui-shadow-6 mdui-drawer-close" id="drawer">
-        <div class="mdui-list">
-            <a class="mdui-list-item mdui-ripple" id="link-index">
-                <i class="mdui-list-item-icon mdui-icon material-icons">home</i>
-                <div class="mdui-list-item-content">首页</div>
-            </a>
-            <a class="mdui-list-item mdui-ripple" id="link-welcome">
-                <i class="mdui-list-item-icon mdui-icon material-icons">star</i>
-                <div class="mdui-list-item-content">欢迎使用</div>
-            </a>
-            <div class="mdui-subheader">时间管理</div>
-            <a class="mdui-list-item mdui-ripple" id="link-clock">
-                <i class="mdui-list-item-icon mdui-icon material-icons">access_time</i>
-                <div class="mdui-list-item-content">时钟</div>
-            </a>
-            <a class="mdui-list-item mdui-ripple" id="link-pomodoro-timer">
-                <i class="mdui-list-item-icon mdui-icon material-icons">timer</i>
-                <div class="mdui-list-item-content">番茄钟</div>
-            </a>
-            <a class="mdui-list-item mdui-ripple" id="link-word-notepad">
-                <i class="mdui-list-item-icon mdui-icon material-icons">book</i>
-                <div class="mdui-list-item-content">单词本</div>
-            </a>
-        </div>
+        <div class="mdui-list"></div>
     </div>
 
     <!-- 一个隐藏的mdui tab选项卡, 使用js调用来切换选项卡. 用于实现页面切换 -->
@@ -106,20 +84,7 @@
             <i class="mdui-icon material-icons">add</i>
             <i class="mdui-icon mdui-fab-opened material-icons">close</i>
         </button>
-        <div class="mdui-fab-dial" id="fab-dial">
-            <button class="mdui-fab mdui-fab-mini mdui-ripple mdui-color-pink">
-                <i class="mdui-icon material-icons">backup</i>
-            </button>
-            <button class="mdui-fab mdui-fab-mini mdui-ripple mdui-color-red">
-                <i class="mdui-icon material-icons">bookmark</i>
-            </button>
-            <button class="mdui-fab mdui-fab-mini mdui-ripple mdui-color-orange">
-                <i class="mdui-icon material-icons">access_alarms</i>
-            </button>
-            <button class="mdui-fab mdui-fab-mini mdui-ripple mdui-color-blue">
-                <i class="mdui-icon material-icons">touch_app</i>
-            </button>
-        </div>
+        <div class="mdui-fab-dial" id="fab-dial"></div>
     </div>
 
     <script src="./node_modules/mdui/dist/js/mdui.min.js"></script>
