--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="cn">
+<html lang="zh">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./node_modules/mdui/dist/css/mdui.min.css">
-    <link rel="stylesheet" href="./css/main.css">
     <title>Self Study Kit</title>
 </head>
 
@@ -87,8 +85,7 @@
         <div class="mdui-fab-dial" id="fab-dial"></div>
     </div>
 
-    <script src="./node_modules/mdui/dist/js/mdui.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./bundle.js"></script>
 </body>
 
 
