fix: 修改js的文件位置与命名使其与webpack示范相同

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="mdui-fab-dial" id="fab-dial"></div>
     </div>
 
-    <script src="./bundle.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 
