--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="mdui-tab" mdui-tab style="display: none;" id="page-changer">
         <a href="#page-index"></a>
         <a href="#page-welcome"></a>
-        <a href="#example1-tab3"></a>
+        <a href="#page-clock"></a>
     </div>
 
     <!-- 首页 -->
@@ -73,8 +73,13 @@
         </div>
     </div>
 
-
-    <div id="example1-tab3" class="mdui-p-a-2">shopping content</div>
+    <!-- 时钟 -->
+    <div id="page-clock" class="mdui">
+        <div class="text-center">
+            <div style="font-size: 300%;" id="page-clock-title"></div>
+            <div style="font-size: 600%;" id="page-clock-text"></div>
+        </div>
+    </div>
 
     <!-- 浮动操作按钮 -->
     <div class="mdui-fab-wrapper mdui-fab-hide" id="fab-wrapper">
