--- a/index.html
+++ b/index.html
@@ -100,22 +100,25 @@
             <a href="#page-pomodoro-timer-clock"></a>
         </div>
         <div id="page-pomodoro-timer-options" class="mdui-typo">
-            <div class="mdui-col-xs-6" style="transform: translateX(40%);">
+            <div class="mdui-col-xs-6" style="transform: translateX(45%);">
                 <div class="mdui-textfield mdui-textfield-floating-label">
                     <i class="mdui-icon material-icons">textsms</i>
                     <label class="mdui-textfield-label">专注时间</label>
                     <input class="mdui-textfield-input" type="专注时间" />
+                    <div class="mdui-textfield-error"></div>
                 </div>
                 <div class="mdui-textfield mdui-textfield-floating-label">
                     <i class="mdui-icon material-icons">textsms</i>
                     <label class="mdui-textfield-label">休息时间</label>
                     <input class="mdui-textfield-input" type="休息时间" />
+                    <div class="mdui-textfield-error"></div>
                 </div>
                 <div class="mdui-row">
                     <div class="mdui-col-xs-10 mdui-textfield mdui-textfield-floating-label">
                         <i class="mdui-icon material-icons">textsms</i>
                         <label class="mdui-textfield-label">长休息时间</label>
                         <input class="mdui-textfield-input" type="长休息时间" />
+                        <div class="mdui-textfield-error"></div>
                     </div>
                     <label class="mdui-col-xs-2 mdui-switch">
                         <br />
@@ -132,6 +135,13 @@
         </div>
         <div id="page-pomodoro-timer-clock" class="mdui-typo">
             待开发
+            <div style="text-align: center;">
+                <button class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-red"
+                    id="button-pomodoro-timer-start">提前结束</button>
+                <button class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme-accent"
+                    id="button-pomodoro-timer-start">下一阶段</button>
+
+            </div>
         </div>
 
     </div>
