--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a href="#page-welcome"></a>
             <a href="#page-clock"></a>
             <a href="#page-pomodoro-timer"></a>
-            <a href="#page-word-notepad"></a>
+            <!-- <a href="#page-word-notepad"></a> -->
             <a href="#page-settings"></a>
         </div>
 
@@ -161,7 +161,7 @@
         </div>
 
         <!-- 单词本 -->
-        <div id="page-word-notepad" class="mdui-typo">单词本 待开发</div>
+        <!-- <div id="page-word-notepad" class="mdui-typo">单词本 待开发</div> -->
 
         <!-- 设置 -->
         <div id="page-settings" class="mdui-typo">设置 待开发</div>
