fix: 右上角主题色切换按钮 to: [番茄钟]长休息逻辑纠正, 但是没写关闭长休息的判断逻辑, 这可能会使长休息跳过

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="javascript:;" class="mdui-typo-title">首页</a>
                 <div class="mdui-toolbar-spacer"></div>
 
-                <button href="javascript:;" class="mdui-btn mdui-btn-icon">
+                <button href="javascript:;" class="mdui-btn mdui-btn-icon" mdui-menu="{target: '#right-menu'}">
                     <i class="mdui-icon material-icons">more_vert</i>
                 </button>
                 <ul class="mdui-menu" id="right-menu">
