--- a/index.html
+++ b/index.html
@@ -106,21 +106,21 @@
                 <div class="mdui-col-xs-6" style="transform: translateX(45%)">
                     <div class="mdui-textfield mdui-textfield-floating-label">
                         <i class="mdui-icon material-icons">textsms</i>
-                        <label class="mdui-textfield-label">专注时间</label>
-                        <input class="mdui-textfield-input" type="专注时间" />
+                        <label class="mdui-textfield-label">专注时间 (秒)</label>
+                        <input class="mdui-textfield-input" type="number" value="25" />
                         <div class="mdui-textfield-error"></div>
                     </div>
                     <div class="mdui-textfield mdui-textfield-floating-label">
                         <i class="mdui-icon material-icons">textsms</i>
-                        <label class="mdui-textfield-label">休息时间</label>
-                        <input class="mdui-textfield-input" type="休息时间" />
+                        <label class="mdui-textfield-label">休息时间 (秒)</label>
+                        <input class="mdui-textfield-input" type="number" value="5" />
                         <div class="mdui-textfield-error"></div>
                     </div>
                     <div class="mdui-row">
                         <div class="mdui-col-xs-10 mdui-textfield mdui-textfield-floating-label">
                             <i class="mdui-icon material-icons">textsms</i>
-                            <label class="mdui-textfield-label">长休息时间</label>
-                            <input class="mdui-textfield-input" type="长休息时间" />
+                            <label class="mdui-textfield-label">长休息时间 (秒)</label>
+                            <input class="mdui-textfield-input" type="number" value="30" />
                             <div class="mdui-textfield-error"></div>
                         </div>
                         <label class="mdui-col-xs-2 mdui-switch">
